Updating trunk to version 2.6.6
git-svn-id: http://subversion.jfrog.org/artifactory/public/trunk@13690 2c6c46e5-621b-0410-92f3-c2a4854cd828